samples/_failures_safe/1761459027_6468ae_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8c6a196b.c: In function ‘main’:
./samples/SAFE/__tmp_8c6a196b.c:151:17: error: expected expression at end of input
  151 |                 if (matrix_add(&
      |                 ^~
./samples/SAFE/__tmp_8c6a196b.c:151:21: error: too few arguments to function ‘matrix_add’
  151 |                 if (matrix_add(&
      |                     ^~~~~~~~~~
./samples/SAFE/__tmp_8c6a196b.c:93:5: note: declared here
   93 | int matrix_add(const Matrix* a, const Matrix* b, Matrix* result) {
      |     ^~~~~~~~~~
./samples/SAFE/__tmp_8c6a196b.c:151:17: error: expected declaration or statement at end of input
  151 |                 if (matrix_add(&
      |                 ^~
./samples/SAFE/__tmp_8c6a196b.c:151:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8c6a196b.c:151:17: error: expected declaration or statement at end of input
